test/reusable/error/wip/gen_add_array.bfr
# エラーにならない
# Value.to_nselがcellとarrayを区別しないため

main {
  a: array(3) {
    i: index;
  };
} [
  + a
]